--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "magic-sdk": "^9.1.0",
     "moment": "^2.29.4",
     "moralis": "^2.5.8",
+    "moralis-v1": "^1.11.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
